# pynusmv

./: .gitignore  .travis.yml  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  manylinux-build.yml
dependencies/NuSMV/: cudd.patch
