[project]
name = "pynusmv"
version = "v1.0rc8"
dependecies = ["swig"]

[tool.cibuildwheel]
# Only build on CPython 3.9, 3.10, 3.11, 3.12, and 3.13
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# Skip muslinux builds
skip = "*musllinux*"

[tool.cibuildwheel.macos]
# Build intel, arm and universal 2 binaries
archs = "x86_64 arm64 universal2"

[tool.cibuildwheel.linux]
# Install system library
#before-all = "yum install -y flex"
# Build only x86_64 architecture
archs = ["x86_64"]
